// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerMenu component should match snapshot - DrawerMenu custom children 1`] = `
<div
  className="NatDSDrawerMenu-root-1"
>
  <div>
    some custom children
  </div>
</div>
`;

exports[`DrawerMenu component should match snapshot - DrawerMenu custom component 1`] = `
<section
  className="NatDSDrawerMenu-root-1"
>
  <ul
    className="MuiList-root MuiList-dense MuiList-padding NatDSDrawerMenu-listPadding-2"
  >
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-33"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-34"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
          >
            Novo
          </span>
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root makeStyles-root-36 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root makeStyles-root-38"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-39"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
          >
            Novo
          </span>
        </span>
      </div>
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-arrowbottom NatDSIcon-root-7 NatDSIcon-root-40"
      />
      <span
        className="MuiTouchRipple-root"
      />
    </li>
    <li
      className="MuiCollapse-root MuiCollapse-hidden"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper"
      >
        <div
          className="MuiCollapse-wrapperInner"
        >
          <ul
            className="MuiList-root MuiList-dense MuiList-padding makeStyles-padding-35"
          >
            <li
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
              >
                <i
                  aria-hidden={true}
                  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-41"
                />
              </div>
              <div
                className="MuiListItemText-root MuiListItemText-dense"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
                >
                  <span
                    className="MuiTypography-root MuiTypography-body2"
                  >
                    Menu Item
                  </span>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </li>
            <li
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
              >
                <i
                  aria-hidden={true}
                  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-42"
                />
              </div>
              <div
                className="MuiListItemText-root MuiListItemText-dense"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
                >
                  <span
                    className="MuiTypography-root MuiTypography-body2"
                  >
                    Menu Item
                  </span>
                  <span
                    className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
                  >
                    New
                  </span>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="MuiListSubheader-root NatDSMenuItemText-subheader-5 MuiListSubheader-sticky MuiListSubheader-gutters"
    >
      <span
        className="MuiTypography-root MuiTypography-caption"
      >
        section
      </span>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-43"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
          >
            Novo
          </span>
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </li>
  </ul>
</section>
`;

exports[`DrawerMenu component should match snapshot - DrawerMenu list 1`] = `
<div
  className="NatDSDrawerMenu-root-1"
>
  <ul
    className="MuiList-root MuiList-dense MuiList-padding NatDSDrawerMenu-listPadding-2"
  >
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-8"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
        </span>
      </div>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-10"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
          >
            Novo
          </span>
        </span>
      </div>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root makeStyles-root-25 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root makeStyles-root-27"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-28"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
          >
            Novo
          </span>
        </span>
      </div>
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-arrowbottom NatDSIcon-root-7 NatDSIcon-root-29"
      />
    </li>
    <li
      className="MuiCollapse-root MuiCollapse-hidden"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper"
      >
        <div
          className="MuiCollapse-wrapperInner"
        >
          <ul
            className="MuiList-root MuiList-dense MuiList-padding makeStyles-padding-24"
          >
            <li
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
              >
                <i
                  aria-hidden={true}
                  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-30"
                />
              </div>
              <div
                className="MuiListItemText-root MuiListItemText-dense"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
                >
                  <span
                    className="MuiTypography-root MuiTypography-body2"
                  >
                    Menu Item
                  </span>
                </span>
              </div>
            </li>
            <li
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
              >
                <i
                  aria-hidden={true}
                  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-31"
                />
              </div>
              <div
                className="MuiListItemText-root MuiListItemText-dense"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
                >
                  <span
                    className="MuiTypography-root MuiTypography-body2"
                  >
                    Menu Item
                  </span>
                  <span
                    className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
                  >
                    New
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="MuiListSubheader-root NatDSMenuItemText-subheader-5 MuiListSubheader-sticky MuiListSubheader-gutters"
    >
      <span
        className="MuiTypography-root MuiTypography-caption"
      >
        section
      </span>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-32"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
          >
            Novo
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DrawerMenu component should render custom children 1`] = `
<div
  className="NatDSDrawerMenu-root-1"
>
  <div
    className="custom"
  >
    some custom children
  </div>
</div>
`;

exports[`DrawerMenu component should render list item 1`] = `
<div
  className="NatDSDrawerMenu-root-1"
>
  <ul
    className="MuiList-root MuiList-dense MuiList-padding NatDSDrawerMenu-listPadding-2"
  >
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-44"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DrawerMenu component should render list item with badge 1`] = `
<div
  className="NatDSDrawerMenu-root-1"
>
  <ul
    className="MuiList-root MuiList-dense MuiList-padding NatDSDrawerMenu-listPadding-2"
  >
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-45"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
          >
            badge
          </span>
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </li>
  </ul>
</div>
`;

exports[`DrawerMenu component should render submenu item 1`] = `
<div
  className="NatDSDrawerMenu-root-1"
>
  <ul
    className="MuiList-root MuiList-dense MuiList-padding NatDSDrawerMenu-listPadding-2"
  >
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-46"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
        </span>
      </div>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-47"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
          >
            Novo
          </span>
        </span>
      </div>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root makeStyles-root-49 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root makeStyles-root-51"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-52"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
          >
            Novo
          </span>
        </span>
      </div>
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-arrowbottom NatDSIcon-root-7 NatDSIcon-root-53"
      />
    </li>
    <li
      className="MuiCollapse-root MuiCollapse-hidden"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper"
      >
        <div
          className="MuiCollapse-wrapperInner"
        >
          <ul
            className="MuiList-root MuiList-dense MuiList-padding makeStyles-padding-48"
          >
            <li
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
              >
                <i
                  aria-hidden={true}
                  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-54"
                />
              </div>
              <div
                className="MuiListItemText-root MuiListItemText-dense"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
                >
                  <span
                    className="MuiTypography-root MuiTypography-body2"
                  >
                    Menu Item
                  </span>
                </span>
              </div>
            </li>
            <li
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
              >
                <i
                  aria-hidden={true}
                  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-55"
                />
              </div>
              <div
                className="MuiListItemText-root MuiListItemText-dense"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
                >
                  <span
                    className="MuiTypography-root MuiTypography-body2"
                  >
                    Menu Item
                  </span>
                  <span
                    className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
                  >
                    New
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="MuiListSubheader-root NatDSMenuItemText-subheader-5 MuiListSubheader-sticky MuiListSubheader-gutters"
    >
      <span
        className="MuiTypography-root MuiTypography-caption"
      >
        section
      </span>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-56"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
          >
            Novo
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DrawerMenu component should start with submenu opened 1`] = `
<div
  className="NatDSDrawerMenu-root-1"
>
  <ul
    className="MuiList-root MuiList-dense MuiList-padding NatDSDrawerMenu-listPadding-2"
  >
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root makeStyles-root-58 MuiListItem-dense MuiListItem-gutters MuiListItem-button Mui-selected makeStyles-selected-59"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root makeStyles-root-60"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-61"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
          >
            Novo
          </span>
        </span>
      </div>
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-arrowtop NatDSIcon-root-7 NatDSIcon-root-62"
      />
      <span
        className="MuiTouchRipple-root"
      />
    </li>
    <li
      className="MuiCollapse-root MuiCollapse-entered"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper"
      >
        <div
          className="MuiCollapse-wrapperInner"
        >
          <ul
            className="MuiList-root MuiList-dense MuiList-padding makeStyles-padding-57"
          >
            <li
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
              >
                <i
                  aria-hidden={true}
                  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-63"
                />
              </div>
              <div
                className="MuiListItemText-root MuiListItemText-dense"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
                >
                  <span
                    className="MuiTypography-root MuiTypography-body2"
                  >
                    Menu Item
                  </span>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </li>
            <li
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root NatDSMenuItemText-listItem-3 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root NatDSMenuItemText-iconItem-4"
              >
                <i
                  aria-hidden={true}
                  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-7 NatDSIcon-root-64"
                />
              </div>
              <div
                className="MuiListItemText-root MuiListItemText-dense"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary MuiTypography-body2 MuiTypography-displayBlock"
                >
                  <span
                    className="MuiTypography-root MuiTypography-body2"
                  >
                    Menu Item
                  </span>
                  <span
                    className="NatDSMenuItemText-badgeComponent-9 NatDSTag-root-11 NatDSTag-error-13 NatDSTag-default-20 NatDSTag-small-22"
                  >
                    New
                  </span>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </li>
          </ul>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
